--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,12 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<body>
+    <div id="root"></div>
+    <script type="module">
+        const root = document.getElementById('root')
+        const elementDiv = document.createElement('div')
+        elementDiv.textContent = 'Hola  papa'
+        root.append(elementDiv)
+    </script>
+</body>
